// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressBar /> Complete story renders snapshot 1`] = `
<div
  class="m-4"
>
  <div>
    <div>
      <div
        class="progress-bar__label-wrapper"
      >
        <label
          class="progress-bar__label"
          id=":r8:"
        >
          Progress Bar Label
        </label>
        <span
          class="text text--caption"
          id=":r9:"
        >
          100/100
        </span>
      </div>
      <div
        aria-describedby=":r9:"
        aria-labelledby=":r8:"
        aria-valuemax="100"
        aria-valuenow="100"
        class="progress-bar"
        role="progressbar"
      >
        <div
          class="progress-bar__segments-wrapper"
          style="width: 100%;"
        >
          <div
            class="progress-bar__segment"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        class="progress-bar__label-wrapper"
      >
        <label
          class="progress-bar__label"
          id=":ra:"
        >
          Progress Bar Label
        </label>
        <span
          class="text text--caption"
          id=":rb:"
        >
          100/100
        </span>
      </div>
      <div
        aria-describedby=":rb:"
        aria-labelledby=":ra:"
        aria-valuemax="100"
        aria-valuenow="100"
        class="progress-bar"
        role="progressbar"
      >
        <div
          class="progress-bar__segments-wrapper"
          style="width: 100%;"
        >
          <div
            class="progress-bar__segment"
          />
          <div
            class="progress-bar__segment"
          />
          <div
            class="progress-bar__segment"
          />
          <div
            class="progress-bar__segment"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> Default story renders snapshot 1`] = `
<div
  class="m-4"
>
  <div>
    <div
      class="progress-bar__label-wrapper"
    >
      <label
        class="progress-bar__label"
        id=":r0:"
      >
        Progress Bar Label
      </label>
      <span
        class="text text--caption"
        id=":r1:"
      >
        20/100
      </span>
    </div>
    <div
      aria-describedby=":r1:"
      aria-labelledby=":r0:"
      aria-valuemax="100"
      aria-valuenow="20"
      class="progress-bar"
      role="progressbar"
    >
      <div
        class="progress-bar__segments-wrapper"
        style="width: 20%;"
      >
        <div
          class="progress-bar__segment"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> Empty story renders snapshot 1`] = `
<div
  class="m-4"
>
  <div>
    <div
      class="progress-bar__label-wrapper"
    >
      <label
        class="progress-bar__label"
        id=":r2:"
      >
        Progress Bar Label
      </label>
      <span
        class="text text--caption"
        id=":r3:"
      >
        0/100
      </span>
    </div>
    <div
      aria-describedby=":r3:"
      aria-labelledby=":r2:"
      aria-valuemax="100"
      aria-valuenow="0"
      class="progress-bar"
      role="progressbar"
    >
      <div
        class="progress-bar__segments-wrapper"
        style="width: 0%;"
      >
        <div
          class="progress-bar__segment"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> TwoSegments story renders snapshot 1`] = `
<div
  class="m-4"
>
  <div>
    <div
      class="progress-bar__label-wrapper"
    >
      <label
        class="progress-bar__label"
        id=":r6:"
      >
        Progress Bar Label
      </label>
      <span
        class="text text--caption"
        id=":r7:"
      >
        20/100
      </span>
    </div>
    <div
      aria-describedby=":r7:"
      aria-labelledby=":r6:"
      aria-valuemax="100"
      aria-valuenow="20"
      class="progress-bar"
      role="progressbar"
    >
      <div
        class="progress-bar__segments-wrapper"
        style="width: 20%;"
      >
        <div
          class="progress-bar__segment"
        />
        <div
          class="progress-bar__segment"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> WithCustomCaption story renders snapshot 1`] = `
<div
  class="m-4"
>
  <div>
    <div
      class="progress-bar__label-wrapper"
    >
      <label
        class="progress-bar__label"
        id=":r4:"
      >
        Progress Bar Label
      </label>
      <span
        class="text text--caption"
        id=":r5:"
      >
        20 %
      </span>
    </div>
    <div
      aria-describedby=":r5:"
      aria-labelledby=":r4:"
      aria-valuemax="100"
      aria-valuenow="20"
      class="progress-bar"
      role="progressbar"
    >
      <div
        class="progress-bar__segments-wrapper"
        style="width: 20%;"
      >
        <div
          class="progress-bar__segment"
        />
      </div>
    </div>
  </div>
</div>
`;
